# est-operator

./: .gitignore  CONTRIBUTING.org  Dockerfile  Dockerfile.debug  Dockerfile.fips  README.org  base-requirements.in  base-requirements.txt  dev-requirements.in  dev-requirements.txt  est-operator.py  fips-requirements.in  fips-requirements.txt  requirements.in  requirements.txt  setup.cfg
.github/workflows/: codeql-analysis.yml
docs/: DESIGN.org  ESTISSUER.org  RFC7030.org
estoperator/: __init__.py  callbacks.py  certificaterequest.py  certificaterequests.py  controller.py  estissuer.py  estissuers.py  estorder.py  estorders.py  helpers.py  indexes.py  server.py  utilities.py
examples/: estissuer.yaml
manifests/: approver_clusterrole.yaml  approver_clusterrolebinding.yaml  kustomization.yaml
manifests/crds/: est.mitre.org_estclusterissuers.yaml  est.mitre.org_estissuers.yaml  est.mitre.org_estorders.yaml  kustomization.yaml
manifests/crds/bases/: est.mitre.org_estclusterissuers.json  est.mitre.org_estclusterissuers.yaml  est.mitre.org_estissuers.yaml  est.mitre.org_estorders.yaml  kustomization.yaml
manifests/crds/bases/tests/: bad-base64.yaml  bad-port.yaml  correct-min.yaml  correct.yaml  (+2 more)
src/estissuer/models/: est_mitre_org_v1alpha1.py
src/estissuer/resources/: est_mitre_org_v1alpha1.py
tests/: conftest.py  test_certificaterequest.py  test_indexes.py
tests/manifests/: estclusterissuer_success.yaml  estissuer_success.yaml  kustomization.yaml  test_cert_estclusterissuer.yaml  test_cert_estissuer.yaml  test_estclusterissuer.yaml  test_estissuer.yaml
