# cryptography==3.1.1
# pyopenssl<20
# --no-binary=cryptography
# --no-binary=pyopenssl
# for FIPS versions, cryptography has to be linked to the FIPS OpenSSL version
[metadata]
name = estoperator
version = 0.0.1

[options]
packages = estoperator
install_requires =
    kopf
    kubernetes
    # cryptography == 3.1.1
    # pyopenssl < 20
    # pem
    # requests
    # pyyaml
