# cryptography==3.1.1
# pyopenssl<20
# --no-binary=cryptography
# --no-binary=pyopenssl
# for FIPS versions, cryptography has to be linked to the FIPS OpenSSL version
[metadata]
name = estissuer
version = 0.0.1

[options]
    package_dir=
        =src
    packages=find:
    install_requires=
        kopf
        lightkube

    [options.packages.find]
    where=src
